# rami-gaggi-blog

./: .env _example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: blog-check.yml
app/: __init__.py  cli.py  config.py  email.py  forms.py  messages.py  misc.py  models.py  my_utils.py  search.py  translate.py  views.py
app/auth/: email.py  forms.py  views.py
app/core/: __init__.py  forms.py  views.py
app/templates/: 404.html  500.html  _navbar.html  _post.html  base.html  edit_profile.html  index.html  login.html  register.html  reset_password.html  reset_password_request.html  search.html  user.html
app/templates/auth/: login.html
app/templates/email/: reset_password.html
app/templates/errors/: 404.html
app/translations/ru/LC_MESSAGES/: messages.po
migrations/versions/: 2749a37718ac_add_language_to_posts.py  60db71bf66e5_.py  6c8bec7d5be8_posts_table.py  991c0020125f_new_fields_in_user_model.py  e9a4786538b4_followers.py
tests/: test_blog.py  test_microblog.py
