[tool.poetry]
name = "microblog"
version = "0.1.0"
description = ""
authors = ["Ramil Gadzhiev <rami.gaggi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.1"
python-dotenv = "^0.19.0"
Flask-WTF = "^0.15.1"
Flask-SQLAlchemy = "^2.5.1"
Flask-Migrate = "^3.1.0"
mysqlclient = "^2.0.3"
Flask-Login = "^0.5.0"
WTForms = {extras = ["email"], version = "^2.3.3"}
Flask-Mail = "^0.9.1"
PyJWT = "^2.1.0"
Bootstrap-Flask = "^1.8.0"
Flask-Moment = "^1.0.2"
Flask-Babel = "^2.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
wemake-python-styleguide = "^0.15.3"
pytest-flask = "^1.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
